force-app/main/default/objects/Knowledge__kav/fields/Categorie_Consigne__c.field-meta.xml
<CustomField>
    <fullName>Categorie_Consigne__c</fullName>
    <description>@description: champ pour la catégorie de consigne Knowledge
@projet: smile</description>
    <label>Categorie Consigne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Modification des données personnelles</fullName>
            </value>
            <value>
                <fullName>Modification/annulation des OPS</fullName>
            </value>
            <value>
                <fullName>Communication Relevé Index</fullName>
            </value>
            <value>
                <fullName>Demande de duplicata</fullName>
            </value>
            <value>
                <fullName>Suivi activation</fullName>
            </value>
            <value>
                <fullName>Délai de paiement</fullName>
            </value>
            <value>
                <fullName>Résiliation</fullName>
            </value>
            <value>
                <fullName>Historique factures</fullName>
            </value>
            <value>
                <fullName>Historique conso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>