force-app/main/default/objects/Knowledge__kav/fields/Cle_Migration__c.field-meta.xml
<CustomField>
    <fullName>Cle_Migration__c</fullName>
    <description>@description: clé externe permettant de gérer le mapping dans les insert OS
@projet: smile</description>
    <label>Cle Migration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>