force-app/main/default/objects/Knowledge__kav/fields/Consigne__c.field-meta.xml
<CustomField>
    <fullName>Consigne__c</fullName>
    <description>@description: champ pour la consigne Knowledge
@projet: smile</description>
    <label>Consigne</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>