force-app/main/default/objects/Knowledge__kav/fields/Etape_de_l_omniscript__c.field-meta.xml
<CustomField>
    <fullName>Etape_de_l_omniscript__c</fullName>
    <label>Etape de l&apos;omniscript</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTEXTE</fullName>
            </value>
            <value>
                <fullName>LOGEMENT</fullName>
            </value>
            <value>
                <fullName>CHOIX DE L&apos;OFFRE</fullName>
            </value>
            <value>
                <fullName>SERVICES DE GESTION</fullName>
            </value>
            <value>
                <fullName>CREATION OPS</fullName>
            </value>
            <value>
                <fullName>CRITÈRES DE NON RECEVABILITÉ DE L&apos;INDEX</fullName>
            </value>
            <value>
                <fullName>PROMOTION DU SELFCARE</fullName>
            </value>
            <value>
                <fullName>CONSIGNES MÉTIERS</fullName>
            </value>
            <value>
                <fullName>TRAITEMENT DEMANDE</fullName>
            </value>
            <value>
                <fullName>SYNTHÈSE OPS</fullName>
            </value>
            <value>
                <fullName>VISUALISATION DE LA PC / DES CPV</fullName>
            </value>
            <value>
                <fullName>CRÉATION OPS</fullName>
            </value>
            <value>
                <fullName>VÉRIFICATION DE L&apos;ACTIVATION DU CONTRAT</fullName>
            </value>
            <value>
                <fullName>SERVICES AFFINITAIRES</fullName>
            </value>
            <value>
                <fullName>RÉCAPITULATIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>