force-app/main/default/objects/Knowledge__kav/fields/HP_TECH_DataCategories__c.field-meta.xml
<CustomField>
    <fullName>HP_TECH_DataCategories__c</fullName>
    <label>Catégories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>