force-app/main/default/objects/Knowledge__kav/fields/HP_TECH_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>HP_TECH_ExternalId__c</fullName>
    <label>HP_TECH_ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>