force-app/main/default/objects/Knowledge__kav/fields/Reference_DRU__c.field-meta.xml
<CustomField>
    <fullName>Reference_DRU__c</fullName>
    <description>@description: champ créé pour stocker l&apos;URL menant vers le document de référence unique
@projet: smile</description>
    <label>Reference DRU</label>
    <type>Url</type>
</CustomField>