force-app/main/default/objects/Knowledge__kav/fields/Reponse__c.field-meta.xml
<CustomField>
    <fullName>Reponse__c</fullName>
    <description>@description: champ pour les réponses FAQ Knowledge 
@projet: smile</description>
    <label>Reponse</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>