force-app/main/default/objects/Knowledge__kav/fields/SM_LightningUrl__c.field-meta.xml
<CustomField>
    <fullName>SM_LightningUrl__c</fullName>
    <description>Url knowledge lightning</description>
    <formula>$Label.SM_OrgUrl  &amp;  &apos;articles/Knowledge/&apos; &amp;  UrlName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SM_LightningUrl</label>
    <type>Text</type>
</CustomField>