force-app/main/default/objects/Knowledge__kav/fields/SM_Projet__c.field-meta.xml
<CustomField>
    <fullName>SM_Projet__c</fullName>
    <defaultValue>IF(BEGINS( $Profile.Name  ,  &apos;SM&apos;),  &apos;SMILE&apos;,  &apos;&apos;)</defaultValue>
    <label>SM_Projet</label>
    <length>5</length>
    <type>Text</type>
</CustomField>