force-app/main/default/objects/Knowledge__kav/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Base_de_connaissance_del</relationshipName>
    <type>Lookup</type>
</CustomField>