force-app/main/default/objects/Knowledge__kav/fields/Submitted_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Email__c</fullName>
    <label>Submitted By Email</label>
    <type>Email</type>
</CustomField>