force-app/main/default/objects/Knowledge__kav/fields/Typologie_Informations__c.field-meta.xml
<CustomField>
    <fullName>Typologie_Informations__c</fullName>
    <description>@description: permet de distinguer entre les différents types d&apos;informations à communiquer au conseiller
@projet: smile</description>
    <label>Typologie Informations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info Bleue</fullName>
            </value>
            <value>
                <fullName>Information Urgente</fullName>
            </value>
            <value>
                <fullName>Info dédiée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>