force-app/main/default/objects/Knowledge__kav/recordTypes/Argumentaire_commercial.recordType-meta.xml
<RecordType>
    <fullName>Argumentaire_commercial</fullName>
    <active>true</active>
    <description>Cette typologie permet de gérer les argumentaires commerciaux ainsi que les mentions légales</description>
    <label>Argumentaire commercial</label>
</RecordType>