force-app/main/default/objects/Knowledge__kav/recordTypes/Article_Sugg_r.recordType-meta.xml
<RecordType>
    <fullName>Article_Sugg_r</fullName>
    <active>true</active>
    <description>Permet de pousser les articles &quot;suggérés&quot; dans le parcours Vlocity dans le composant Knowledge</description>
    <label>Article Suggéré</label>
</RecordType>