force-app/main/default/objects/Knowledge__kav/recordTypes/DICO.recordType-meta.xml
<RecordType>
    <fullName>DICO</fullName>
    <active>true</active>
    <description>Document de référence pour les processus et marketing</description>
    <label>SURF</label>
</RecordType>