force-app/main/default/objects/Knowledge__kav/recordTypes/happ_e.recordType-meta.xml
<RecordType>
    <fullName>happ_e</fullName>
    <active>true</active>
    <description>Knowledge base for the use of Happ-e</description>
    <label>happ-e</label>
</RecordType>