force-app/main/default/objects/Knowledge__kav/recordTypes/Informations.recordType-meta.xml
<RecordType>
    <fullName>Informations</fullName>
    <active>false</active>
    <description>Article de type Info bleue et Info rouge</description>
    <label>Informations</label>
</RecordType>