force-app/main/default/objects/Knowledge__kav/recordTypes/Insert_Omniscript.recordType-meta.xml
<RecordType>
    <fullName>Insert_Omniscript</fullName>
    <active>true</active>
    <description>Consignes métiers organisées par thématique / parcours</description>
    <label>Insert Omniscript</label>
</RecordType>