force-app/main/default/objects/Knowledge__kav/listViews/draft_articles.listView-meta.xml
<ListView>
    <fullName>draft_articles</fullName>
    <columns>TITLE</columns>
    <columns>Categorie_Consigne__c</columns>
    <columns>Etape_de_l_omniscript__c</columns>
    <columns>Consigne__c</columns>
    <columns>Cle_Migration__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ASSIGNEDTO_USER</columns>
    <columns>ASSIGNEDBY_USER</columns>
    <columns>ASSIGNMENT_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>fr</value>
    </filters>
    <label>Draft Articles</label>
</ListView>