force-app/main/default/objects/Knowledge__kav/listViews/HP_happ_e_souscription.listView-meta.xml
<ListView>
    <fullName>HP_happ_e_souscription</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>HP_TECH_DataCategories__c</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.happ_e</value>
    </filters>
    <filters>
        <field>HP_TECH_DataCategories__c</field>
        <operation>equals</operation>
        <value>Souscription</value>
    </filters>
    <label>happ-e : souscription</label>
    <sharedTo>
        <roleAndSubordinatesInternal>HP_HAPPE</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>