force-app/main/default/objects/Knowledge__kav/listViews/HP_Publie.listView-meta.xml
<ListView>
    <fullName>HP_Publie</fullName>
    <columns>Categorie_Consigne__c</columns>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.happ_e</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Articles Knowledge happ-e publiés</label>
    <sharedTo>
        <roleAndSubordinatesInternal>HP_HAPPE</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>