force-app/main/default/objects/Knowledge__kav/listViews/IN.listView-meta.xml
<ListView>
    <fullName>IN</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Informations</value>
    </filters>
    <label>INFOS BLEUES &amp; INFOS ROUGES</label>
</ListView>