force-app/main/default/objects/Knowledge__kav/listViews/published_articles.listView-meta.xml
<ListView>
    <fullName>published_articles</fullName>
    <columns>ASSIGNEDBY_USER</columns>
    <columns>ASSIGNEDTO_USER</columns>
    <columns>TITLE</columns>
    <columns>Categorie_Consigne__c</columns>
    <columns>Etape_de_l_omniscript__c</columns>
    <columns>Consigne__c</columns>
    <columns>Cle_Migration__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Categorie_Consigne__c</field>
        <operation>equals</operation>
        <value>Acquisition</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Insert_Omniscript</value>
    </filters>
    <label>Published Articles</label>
</ListView>